--- a/package.json
+++ b/package.json
@@ -48,6 +48,17 @@
     "nodemon": "^3.0.2",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "eslint": "^9.12.0",
+    "prettier": "^3.3.3",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.7"
+  },
+  "lint-staged": {
+    "*.{js,jsx,mjs,cjs,ts,tsx}": [
+      "eslint --fix",
+      "prettier -w"
+    ],
+    "*": "prettier -w --ignore-unknown"
   }
 }
