feat: add math evaluation endpoint

--- a/lucidia/requirements.txt
+++ b/lucidia/requirements.txt
@@ -1,1 +1,2 @@
-Flask==2.3.2 --hash=sha256:deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef
+Flask==2.3.2 --hash=sha256:77fd4e1249d8c9923de34907236b747ced06e5467ecac1a7bb7115ae0e9670b0
+sympy==1.12 --hash=sha256:c3588cd4295d0c0f603d0f2ae780587e64e2efeedb3521e46b9bb1d08d184fa5
