--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,5 +38,6 @@ http {
     ''      close;
   }
 
-  include /etc/nginx/conf.d/*.conf;
+  # Load site configurations
+  include /etc/nginx/sites-enabled/*.conf;
 }
