--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "dev": "nodemon server_full.js",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint . --ext .js,.jsx,.mjs,.cjs || true",
-    "format": "prettier -w .",
-    "test": "node tests/smoke.test.mjs",
-    "test:jest": "NODE_ENV=test jest --runInBand",
-    "test-db": "node tests/test_db.js",
-    "test-auth": "node tests/test_auth.js",
-    "test-projects-tasks": "node tests/test_projects_tasks.js",
-    "test-logs-contradictions": "node tests/test_logs_contradictions.js",
+    "lint": "eslint .",
+    "format": "prettier . --write",
+    "test": "jest",
+    "typecheck": "echo 'no typecheck'",
+    "health": "node scripts/health.js",
     "dev:site": "npm --prefix sites/blackroad run dev",
     "build": "npm --prefix sites/blackroad run build",
     "test-agents-pack": "node tests/test_agents_mega.js",
