--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+<!-- FILE: .prettierignore -->
 node_modules/
 dist/
 build/
@@ -6,3 +7,4 @@ public/vendor/
 **/*.min.css
 .github/workflows/auto-heal.yml
 .github/workflows/flags.yml
+_trash
