feat(api): harden express server

--- a/srv/blackroad-api/.env.sample
+++ b/srv/blackroad-api/.env.sample
@@ -1,9 +1,10 @@
 <!-- FILE: srv/blackroad-api/.env.sample -->
+# Sample environment for BlackRoad API
 PORT=4000
-SESSION_SECRET=change_me
+SESSION_SECRET=change_me           # cookie-session secret
 DB_PATH=/srv/blackroad-api/blackroad.db
 LLM_URL=http://127.0.0.1:8000/chat
-ALLOW_SHELL=false
-ALLOW_ORIGINS=
-INTERNAL_TOKEN=change_me
+ALLOW_SHELL=false                  # enable /api/exec
+ALLOW_ORIGINS=                     # comma-separated list
+INTERNAL_TOKEN=change_me           # internal auth token
 BILLING_DISABLE=false
