--- a/srv/blackroad-api/.env.sample
+++ b/srv/blackroad-api/.env.sample
@@ -1,9 +1,10 @@
+# <!-- FILE: srv/blackroad-api/.env.sample -->
 # Sample environment for BlackRoad API
 PORT=4000
 SESSION_SECRET=change_me           # cookie-session secret
+INTERNAL_TOKEN=change_me           # internal auth token
 DB_PATH=/srv/blackroad-api/blackroad.db
 LLM_URL=http://127.0.0.1:8000/chat
 ALLOW_SHELL=false                  # enable /api/exec
-ALLOW_ORIGINS=                     # comma-separated list
-INTERNAL_TOKEN=change_me           # internal auth token
+ALLOW_ORIGINS=https://example.com  # required comma-separated list
 BILLING_DISABLE=false
