--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
+# <!-- FILE: .gitattributes -->
 * text=auto eol=lf
 *.sh text eol=lf
 *.md diff=markdown
 *.{js,jsx,ts,tsx} linguist-language=JavaScript
-
+*.py text eol=lf
+*.db binary
