--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
+  "_comment": "<!-- FILE: package.json -->",
   "name": "blackroad-api",
   "version": "1.0.0",
   "private": true,
   "description": "BlackRoad.io backend API (Express + SQLite + Socket.IO)",
-  "main": "server_full.js",
+  "main": "srv/blackroad-api/server_full.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server_full.js",
-    "dev": "nodemon server_full.js",
+    "start": "node srv/blackroad-api/server_full.js",
+    "dev": "nodemon srv/blackroad-api/server_full.js",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint .",
+    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js",
     "format": "prettier . --write",
-    "test": "jest",
+    "format:check": "prettier package.json srv/lucidia-llm/test_app.py srv/blackroad-api/.prettierrc.json var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
+    "test": "jest tests/api_health.test.js",
     "typecheck": "echo 'no typecheck'",
     "health": "node scripts/health.js",
     "dev:site": "npm --prefix sites/blackroad run dev",
@@ -20,36 +22,40 @@
     "test-agents-pack": "node tests/test_agents_mega.js",
     "frontend:dev": "npm --prefix sites/blackroad run dev",
     "frontend:build": "npm --prefix sites/blackroad run build",
-    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
+    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true",
+    "format:site": "prettier var/www/blackroad --write"
   },
   "engines": {
-    "node": ">=18.17"
+    "node": ">=20"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
+    "compression": "^1.8.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
+    "stripe": "^12.18.0",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0"
+    "winston": "^3.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
     "husky": "^9.0.10",
-    "lint-staged": "^15.2.7"
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.3.3",
+    "supertest": "^6.3.4"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
