feat: harden API server and add smoke tests

--- a/srv/blackroad-api/.env.sample
+++ b/srv/blackroad-api/.env.sample
@@ -1,9 +1,9 @@
 # Sample environment for BlackRoad API
 PORT=4000
-SESSION_SECRET=change_me           # cookie-session secret
+SESSION_SECRET=your_session_secret
+INTERNAL_TOKEN=your_internal_token
+ALLOW_ORIGINS=https://example.com  # comma-separated list
 DB_PATH=/srv/blackroad-api/blackroad.db
 LLM_URL=http://127.0.0.1:8000/chat
-ALLOW_SHELL=false                  # enable /api/exec
-ALLOW_ORIGINS=                     # comma-separated list
-INTERNAL_TOKEN=change_me           # internal auth token
+ALLOW_SHELL=false
 BILLING_DISABLE=false
