--- a/.github/workflows/docker-scout.yml
+++ b/.github/workflows/docker-scout.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker Scout
 
 on:
   push:
@@ -22,6 +22,7 @@ jobs:
       pull-requests: write
 
     steps:
+      - uses: actions/checkout@v4
       # Authenticate to the container registry
       - name: Authenticate to registry ${{ env.REGISTRY }}
         uses: docker/login-action@v3
