--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.35.0
-openai==1.30.1
 matplotlib==3.8.4
 numpy==1.26.4
-whisper
-torch
+openai==1.30.1
+pyyaml==6.0.1
 requests==2.32.2
-PyYAML==6.0.1
+streamlit==1.35.0
+torch
+whisper
 
