--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-anthropic
-boto3
-fastapi
-matplotlib==3.9.4
-numpy==1.26.4
-openai==1.30.1
-pydantic
-pyarrow==16.1.0
-pre-commit==4.3.0
-PyYAML==6.0.2
-python-dotenv
-qiskit-aer==0.17.1
-qiskit-machine-learning==0.7.2
-requests==2.32.4
-streamlit==1.48.1
-torch
-uvicorn
-whisper
+numpy
+pandas
+matplotlib
+scipy
