chore: restore security and dependencies

--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -1,7 +1,11 @@
 title = "BlackRoad Secrets Policy"
-[extend]
-# sensible defaults
-path = ""
+
+[[rules]]
+id = "generic-api-key"
+description = "Generic API key"
+regex = '''(?i)(api[_-]?key|secret|token)\s*[:=]\s*['"][0-9a-zA-Z_\-]{16,}['"]'''
+entropy = 3.5
+
 [allowlist]
 description = "Allow non-secret test fixtures"
 paths = [
