--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-numpy
+anthropic
+boto3
+fastapi
+matplotlib==3.9.4
+numpy==1.26.4
+openai==1.30.1
 pandas
-matplotlib
+pydantic
+pyarrow==16.1.0
+pre-commit==4.3.0
+PyYAML==6.0.2
+python-dotenv
+qiskit-aer==0.17.1
+qiskit-machine-learning==0.7.2
+requests==2.32.4
 scipy
+streamlit==1.48.1
+torch
+uvicorn
+whisper
