test: run backend checks with node test runner

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "dev": "nodemon srv/blackroad-api/server_full.js",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js",
+    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js tests/backend-validation.test.js",
     "format": "prettier . --write",
     "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py srv/blackroad-api/.prettierrc.json var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
-    "test": "jest tests/api_health.test.js",
+    "test": "node --test tests/api_health.test.js tests/backend-validation.test.js",
     "typecheck": "echo 'no typecheck'",
     "health": "node scripts/health.js",
     "dev:site": "npm --prefix sites/blackroad run dev",
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
