--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"No tests configured\""
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
