--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "nodemon srv/blackroad-api/server_full.js",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js",
+    "lint": "eslint --config .eslintrc.cjs srv/blackroad-api/server_full.js tests/api_health.test.js",
     "format": "prettier . --write",
-    "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py srv/blackroad-api/.prettierrc.json var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
+    "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
     "test": "jest tests/api_health.test.js",
     "typecheck": "echo 'no typecheck'",
     "health": "node scripts/health.js",
