--- a/.gitleaks.toml
+++ b/.gitleaks.toml
@@ -12,5 +12,6 @@ paths = [
   "scripts/nginx-ensure-and-health.sh",
   "sshprivate.sh",
   "opt/blackroad/dev/.*",
+  "infrastructure/wireguard/.*",
   '^\.env\.example$',
 ]
