--- a/apps/portals/package.json
+++ b/apps/portals/package.json
@@ -21,13 +21,13 @@
     "@ai-sdk/openai": "latest",
     "@ai-sdk/openai-compatible": "latest",
     "@ai-sdk/react": "latest",
-    "zod": "latest",
-    "ollama-ai-provider-v2": "latest"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "autoprefixer": "10.4.16",
-    "eslint": "9.9.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "9.1.0",
     "postcss": "8.4.31",
     "prettier": "3.3.3",
     "tailwindcss": "3.4.1",
