docs: document roadview storage env

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ NODE_ENV=production
 PORT=4000
 DB_PATH=/srv/blackroad-api/blackroad.db
 
+# RoadView storage directory (overrides default if set)
+ROADVIEW_STORAGE=
+
 # Cookies & JWT
 SESSION_SECRET=change-this-session-secret
 JWT_SECRET=change-this-jwt-secret
