--- a/nginx/blackroad.conf
+++ b/nginx/blackroad.conf
@@ -1,9 +1,16 @@
 # blackroad.io — canonical Nginx configuration
 
+limit_req_zone $binary_remote_addr zone=llm_zone:10m rate=30r/m;
+
 # HTTP: redirect to HTTPS except for healthcheck
 server {
   listen 80 default_server;
   server_name blackroad.io www.blackroad.io;
+
+  add_header X-Content-Type-Options "nosniff" always;
+  add_header Referrer-Policy "same-origin" always;
+  add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'none'" always;
 
   location = /health {
     add_header Content-Type application/json;
@@ -18,6 +25,11 @@ server {
   listen 443 ssl http2;
   server_name blackroad.io www.blackroad.io;
 
+  add_header X-Content-Type-Options "nosniff" always;
+  add_header Referrer-Policy "same-origin" always;
+  add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'none'" always;
+
   ssl_certificate     /etc/letsencrypt/live/blackroad.io/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/blackroad.io/privkey.pem;
 
@@ -27,6 +39,18 @@ server {
   # SPA fallback
   location / {
     try_files $uri /index.html;
+  }
+
+  # LLM bridge
+  location /api/llm/ {
+    proxy_pass http://127.0.0.1:4010;
+    proxy_http_version 1.1;
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    limit_req zone=llm_zone burst=20 nodelay;
+    add_header Retry-After 2 always;
   }
 
   # API and sockets
