--- a/nginx/blackroad.conf
+++ b/nginx/blackroad.conf
@@ -23,6 +23,7 @@ server {
 
   root /var/www/blackroad;
   index index.html;
+  access_log /var/log/nginx/blackroad.access.json blackroad_json;
 
   # SPA fallback
   location / {
@@ -55,5 +56,22 @@ server {
   location = /health {
     add_header Content-Type application/json;
     return 200 '{"ok":true,"service":"nginx","port":443}';
+  }
+
+  location = /healthz {
+    proxy_pass http://127.0.0.1:4010/api/llm/ready;
+    proxy_set_header Host $host;
+    proxy_connect_timeout 1s;
+    proxy_read_timeout 1s;
+    expires -1;
+    add_header Cache-Control "no-store" always;
+  }
+
+  location = /nginx_status {
+    stub_status;
+    allow 127.0.0.1;
+    allow ::1;
+    deny all;
+    access_log off;
   }
 }
