--- a/nginx/blackroad.conf
+++ b/nginx/blackroad.conf
@@ -24,6 +24,8 @@ server {
   root /var/www/blackroad;
   index index.html;
 
+  include /etc/nginx/snippets/blackroad-partner-mtls.conf;
+
   # SPA fallback
   location / {
     try_files $uri /index.html;
