--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,7 @@ http {
   # Rate limiting zones
   limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
   limit_req_zone $binary_remote_addr zone=general:10m rate=5r/s;
+  limit_req_zone $binary_remote_addr zone=partner_zone:10m rate=60r/m;
 
   # Gzip
   gzip on;
