--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.0"
   }
 }
