Add Yjs collaborative editing server and client

--- a/nginx/blackroad.conf
+++ b/nginx/blackroad.conf
@@ -52,6 +52,16 @@ server {
     proxy_set_header Connection        $connection_upgrade;
   }
 
+  # WebSocket proxy for Yjs
+  location /yjs/ {
+    proxy_pass http://127.0.0.1:12345/;
+    proxy_set_header Host $host;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_read_timeout 600s;
+  }
+
   location = /health {
     add_header Content-Type application/json;
     return 200 '{"ok":true,"service":"nginx","port":443}';
