--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "ipfs-http-client": "^60.0.0",
+    "json-canonicalize": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
