--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
     "stripe": "^12.18.0",
-    "ethers": "^6.10.0"
+    "ethers": "^6.10.0",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
