--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
     "stripe": "^12.18.0",
-    "ethers": "^6.10.0"
+    "ethers": "^6.10.0",
+    "bs58": "^6.0.0",
+    "json-canonicalize": "^2.0.0",
+    "ipfs-http-client": "^60.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
