--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "socket.io": "^4.7.5",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
+    "yaml": "^2.4.3",
     "better-sqlite3": "^9.4.3",
     "stripe": "^12.18.0",
     "ethers": "^6.10.0"
