feat: add truth garden modules

--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
     "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0"
+    "stripe": "^12.18.0",
+    "bs58": "^5.0.0",
+    "ipfs-http-client": "^66.0.1",
+    "json-canonicalize": "^1.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
