--- a/package.json
+++ b/package.json
@@ -28,31 +28,35 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.10.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
+    "json-canonicalize": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5",
+    "sqlite3": "^5.1.7",
+    "stripe": "^12.18.0",
     "systeminformation": "^5.25.11",
     "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3",
-    "stripe": "^12.18.0",
-    "ethers": "^6.10.0",
+    "winston": "^3.17.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
     "husky": "^9.0.10",
-    "lint-staged": "^15.2.7"
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.3.3",
+    "supertest": "^6.3.4"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
