--- a/nginx/blackroad.conf
+++ b/nginx/blackroad.conf
@@ -26,6 +26,14 @@ server {
 
   include /etc/nginx/snippets/blackroad-partner-mtls.conf;
 
+  # SPA HTML should not be cached
+  location = /index.html { add_header Cache-Control "no-store"; }
+
+  # All static assets with hashes: long cache
+  location ~* \.(js|css|png|jpg|jpeg|gif|webp|svg|ico|woff2?)$ {
+    add_header Cache-Control "public, max-age=31536000, immutable";
+  }
+
   # SPA fallback
   location / {
     try_files $uri /index.html;
