--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon srv/blackroad-api/server_full.js",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint --config .eslintrc.cjs srv/blackroad-api/server_full.js tests/api_health.test.js",
+    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js",
     "format": "prettier . --write",
     "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
     "test": "jest tests/api_health.test.js",
@@ -54,7 +54,7 @@
     "husky": "^9.0.10",
     "lint-staged": "^15.2.7"
   },
-  "lint-staged": {
+    "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
       "eslint --fix",
       "prettier -w"
