--- a/.github/workflows/stage-stress.yml
+++ b/.github/workflows/stage-stress.yml
@@ -7,6 +7,7 @@ on:
         default: 'false'
   push:
     branches: [stage]
+    paths: ['blackroad-stage/**']
 permissions: { contents: read }
 concurrency:
   group: blackroad-stage-stress
