--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "eslint": "^9.12.0",
     "prettier": "^3.3.3",
     "husky": "^9.0.10",
-    "lint-staged": "^15.2.7"
+    "lint-staged": "^15.2.7",
+    "@eslint/js": "^9.12.0"
   },
     "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
