--- a/services/health-sidecar/.env.example
+++ b/services/health-sidecar/.env.example
@@ -1,3 +1,7 @@
+# Sample environment variables for the health-sidecar service.
+# Port to serve the health endpoints.
 PORT=8088
+# Root directory where the primary API stores its health file.
 API_ROOT=/var/www/blackroad/api
+# Commit SHA injected by the deploy workflow.
 COMMIT_SHA=
