--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -1,16 +1,22 @@
 name: Broken Links
-on: { pull_request: {}, schedule: [ { cron: "0 2 * * *" } ] }
-permissions: { contents: read }
+on:
+  pull_request: {}
+  schedule:
+    - cron: '0 2 * * *'
+permissions:
+  contents: read
 jobs:
   lychee:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
       - id: chk
         run: f="apps/quantum/ternary_consciousness_v3.html"; [ -f "$f" ] && echo ok=1 >> $GITHUB_OUTPUT || echo ok=0 >> $GITHUB_OUTPUT
-      - uses: lycheeverse/lychee-action@v2
+      - uses: lycheeverse/lychee-action@885c65f3dc543b57c898c8099f4e08c8afd178a2 # v2
         if: steps.chk.outputs.ok == '1'
-        with: { args: --verbose --no-progress --timeout 20s "apps/quantum/ternary_consciousness_v3.html" }
-        env: { GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} }
+        with:
+          args: --verbose --no-progress --timeout 20s "apps/quantum/ternary_consciousness_v3.html"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - if: steps.chk.outputs.ok != '1'
         run: echo "ℹ️ Link check skipped (no HTML)." >> $GITHUB_STEP_SUMMARY
