docs: document RoadView storage env

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PORT=4000
 DB_PATH=/srv/blackroad-api/blackroad.db
 
 # RoadView storage directory (overrides default if set)
-ROADVIEW_STORAGE=
+ROADVIEW_STORAGE=/srv/blackroad-api/storage/roadview
 
 # Cookies & JWT
 SESSION_SECRET=change-this-session-secret
