--- a/.github/workflows/links.yml
+++ b/.github/workflows/links.yml
@@ -5,11 +5,13 @@ jobs:
   lychee:
     runs-on: ubuntu-latest
     steps:
-      - # v4.3.0 https://github.com/actions/checkout/releases/tag/v4.3.0
+      - name: Checkout
+        # v4.3.0 https://github.com/actions/checkout/releases/tag/v4.3.0
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955
       - id: chk
         run: f="apps/quantum/ternary_consciousness_v3.html"; [ -f "$f" ] && echo ok=1 >> $GITHUB_OUTPUT || echo ok=0 >> $GITHUB_OUTPUT
-      - # v2.6.1 https://github.com/lycheeverse/lychee-action/releases/tag/v2.6.1
+      - name: Run Lychee
+        # v2.6.1 https://github.com/lycheeverse/lychee-action/releases/tag/v2.6.1
         uses: lycheeverse/lychee-action@885c65f3dc543b57c898c8099f4e08c8afd178a2
         if: steps.chk.outputs.ok == '1'
         with:
