--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,35 @@
 name: CI
-on: [pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+
 jobs:
-  validate:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Validate Terraform
-        run: |
-          cd infra && terraform init -backend=false && terraform validate
-      - name: Lint Flow YAML
-        run: |
-          pipx install yamllint && yamllint flows
-      - name: Schemas & Tests
-        run: |
-          echo "stub: run schema/unit tests here"
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint
+        run: npm run lint
+      - name: Test
+        run: npm test
+      - name: Build
+        run: npm run build --if-present
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/prism:latest
+
