feat: add codex prompt infrastructure

--- a/sites/blackroad/package.json
+++ b/sites/blackroad/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prebuild": "node ./scripts/build-docs.cjs && node ./scripts/build-blog.cjs",
+    "prebuild": "node ./scripts/build-docs.cjs && node ./scripts/build-blog.cjs && node ./scripts/build-codex.cjs",
     "dev": "vite",
     "watch-content": "node ./scripts/watch-content.cjs",
     "build": "vite build",
@@ -12,7 +12,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx || true",
     "format": "prettier -w .",
     "test": "echo \"(add Playwright later)\"",
-    "e2e": "playwright test || true"
+    "e2e": "playwright test || true",
+    "validate:codex": "node ./scripts/build-codex.cjs --validate"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
+    "ajv": "^8.17.1",
     "@vitejs/plugin-react": "5.0.2",
     "autoprefixer": "10.4.21",
     "chokidar": "^3.6.0",
