Add PLM and MFG operations scaffold

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,33 @@
-name: CI
-on: [pull_request]
+name: ci
+on: [push, pull_request]
 jobs:
-  validate:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Validate Terraform
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - run: python -m pip install -U pip pytest jsonschema
+      - run: python -m pip install -e .
+      - name: Unit tests
+        run: pytest -q
+      - name: Demo run (deterministic)
         run: |
-          cd infra && terraform init -backend=false && terraform validate
-      - name: Lint Flow YAML
+          python -m cli.console plm:items:load --dir fixtures/plm/items
+          python -m cli.console plm:bom:load --dir fixtures/plm/boms
+          python -m cli.console mfg:wc:load --file fixtures/mfg/work_centers.csv
+          python -m cli.console mfg:routing:load --dir fixtures/mfg/routings
+          python -m cli.console mfg:routing:capcheck --item PROD-100 --rev B --qty 1000
+          python -m cli.console mfg:wi:render --item PROD-100 --rev B
+          python -m cli.console mfg:spc:analyze --op OP-200 --window 50
+          python -m cli.console mfg:yield --period 2025-09
+          python -m cli.console mfg:mrp --demand artifacts/sop/allocations.csv --inventory fixtures/mfg/inventory.csv --pos fixtures/mfg/open_pos.csv
+          python -m cli.console mfg:coq --period 2025-Q3
+      - name: Contract validation
+        run: python scripts/validate_contracts.py
+      - name: Reproducible artifacts hash
         run: |
-          pipx install yamllint && yamllint flows
-      - name: Schemas & Tests
-        run: |
-          echo "stub: run schema/unit tests here"
+          find artifacts -type f -print0 | sort -z | xargs -0 sha256sum > artifact_hashes.txt
+          cp artifact_hashes.txt artifact_hashes_prev.txt
+          diff -u artifact_hashes_prev.txt artifact_hashes.txt || true
