--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,12 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "blackroad-prism-console"
+version = "0.0.0"
+requires-python = ">=3.11"
+
 [tool.black]
 line-length = 100
 target-version = ["py311"]
@@ -12,4 +21,3 @@ extend-select = ["I"]
 [tool.pytest.ini_options]
 pythonpath = ["."]
 extend-select = ["I"]  # import sort
-
